re PR c++/13310 (Tree check error in dependent_template_p)

PR c++/13310
	* pt.c (dependent_template_p): Handle OVERLOADs.

	PR c++/13310
	* g++.dg/template/crash15.C: New test.

From-SVN: r74649