gcc/testsuite/g++.dg/template/crash15.C
@@ -1,0 +1,9 @@
+// PR c++/13310
+
+struct A {};
+
+template <typename> void foo()
+{
+    A a;
+    a.foo<int>(); // { dg-error "" }
+}
